feat: add about.md

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Generic infos
 
-title: Salvatore's Blog
+title: The Critical Git
 email: sal.penitente@gmail.com
-description: A blog made of stories about useless tinkering
+description: "A blog made of stories about useless tinkering and other weird stuff."
 url: "https://backsofangels.github.io"
 permalink: /:title/
 
